c/sokol_app.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_logger"][::std::mem::size_of::<sapp_logger>() - 16usize];
    ["Alignment of sapp_logger"][::std::mem::align_of::<sapp_logger>() - 8usize];
    ["Offset of field: sapp_logger::func"][::std::mem::offset_of!(sapp_logger, func) - 0usize];
    ["Offset of field: sapp_logger::user_data"]
        [::std::mem::offset_of!(sapp_logger, user_data) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_desc {
    pub init_cb: ::std::option::Option<unsafe extern "C" fn()>,
    pub frame_cb: ::std::option::Option<unsafe extern "C" fn()>,
    pub cleanup_cb: ::std::option::Option<unsafe extern "C" fn()>,
    pub event_cb: ::std::option::Option<unsafe extern "C" fn(arg1: *const sapp_event)>,
    pub user_data: *mut ::std::os::raw::c_void,
    pub init_userdata_cb:
        ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    pub frame_userdata_cb:
        ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    pub cleanup_userdata_cb:
        ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    pub event_userdata_cb: ::std::option::Option<
        unsafe extern "C" fn(arg1: *const sapp_event, arg2: *mut ::std::os::raw::c_void),
    >,
    pub width: ::std::os::raw::c_int,
    pub height: ::std::os::raw::c_int,
    pub sample_count: ::std::os::raw::c_int,
    pub swap_interval: ::std::os::raw::c_int,
    pub high_dpi: bool,
    pub fullscreen: bool,
    pub alpha: bool,
    pub window_title: *const ::std::os::raw::c_char,
    pub enable_clipboard: bool,
    pub clipboard_size: ::std::os::raw::c_int,
    pub enable_dragndrop: bool,
    pub max_dropped_files: ::std::os::raw::c_int,
    pub max_dropped_file_path_length: ::std::os::raw::c_int,
    pub icon: sapp_icon_desc,
    pub allocator: sapp_allocator,
    pub logger: sapp_logger,
    pub gl_major_version: ::std::os::raw::c_int,
    pub gl_minor_version: ::std::os::raw::c_int,
    pub win32_console_utf8: bool,
    pub win32_console_create: bool,
    pub win32_console_attach: bool,
    pub html5_canvas_selector: *const ::std::os::raw::c_char,
    pub html5_canvas_resize: bool,
    pub html5_preserve_drawing_buffer: bool,
    pub html5_premultiplied_alpha: bool,
    pub html5_ask_leave_site: bool,
    pub html5_update_document_title: bool,
    pub html5_bubble_mouse_events: bool,
    pub html5_bubble_touch_events: bool,
    pub html5_bubble_wheel_events: bool,
    pub html5_bubble_key_events: bool,
    pub html5_bubble_char_events: bool,
    pub html5_use_emsc_set_main_loop: bool,
    pub html5_emsc_set_main_loop_simulate_infinite_loop: bool,
    pub ios_keyboard_resizes_canvas: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_desc"][::std::mem::size_of::<sapp_desc>() - 472usize];
    ["Alignment of sapp_desc"][::std::mem::align_of::<sapp_desc>() - 8usize];
    ["Offset of field: sapp_desc::init_cb"][::std::mem::offset_of!(sapp_desc, init_cb) - 0usize];
    ["Offset of field: sapp_desc::frame_cb"][::std::mem::offset_of!(sapp_desc, frame_cb) - 8usize];
    ["Offset of field: sapp_desc::cleanup_cb"]
        [::std::mem::offset_of!(sapp_desc, cleanup_cb) - 16usize];
    ["Offset of field: sapp_desc::event_cb"][::std::mem::offset_of!(sapp_desc, event_cb) - 24usize];
    ["Offset of field: sapp_desc::user_data"]
        [::std::mem::offset_of!(sapp_desc, user_data) - 32usize];
    ["Offset of field: sapp_desc::init_userdata_cb"]
        [::std::mem::offset_of!(sapp_desc, init_userdata_cb) - 40usize];
    ["Offset of field: sapp_desc::frame_userdata_cb"]
        [::std::mem::offset_of!(sapp_desc, frame_userdata_cb) - 48usize];
    ["Offset of field: sapp_desc::cleanup_userdata_cb"]
        [::std::mem::offset_of!(sapp_desc, cleanup_userdata_cb) - 56usize];
    ["Offset of field: sapp_desc::event_userdata_cb"]
        [::std::mem::offset_of!(sapp_desc, event_userdata_cb) - 64usize];
    ["Offset of field: sapp_desc::width"][::std::mem::offset_of!(sapp_desc, width) - 72usize];
    ["Offset of field: sapp_desc::height"][::std::mem::offset_of!(sapp_desc, height) - 76usize];
    ["Offset of field: sapp_desc::sample_count"]
        [::std::mem::offset_of!(sapp_desc, sample_count) - 80usize];
    ["Offset of field: sapp_desc::swap_interval"]
        [::std::mem::offset_of!(sapp_desc, swap_interval) - 84usize];
    ["Offset of field: sapp_desc::high_dpi"][::std::mem::offset_of!(sapp_desc, high_dpi) - 88usize];
    ["Offset of field: sapp_desc::fullscreen"]
        [::std::mem::offset_of!(sapp_desc, fullscreen) - 89usize];
    ["Offset of field: sapp_desc::alpha"][::std::mem::offset_of!(sapp_desc, alpha) - 90usize];
    ["Offset of field: sapp_desc::window_title"]
        [::std::mem::offset_of!(sapp_desc, window_title) - 96usize];
    ["Offset of field: sapp_desc::enable_clipboard"]
        [::std::mem::offset_of!(sapp_desc, enable_clipboard) - 104usize];
    ["Offset of field: sapp_desc::clipboard_size"]
        [::std::mem::offset_of!(sapp_desc, clipboard_size) - 108usize];
    ["Offset of field: sapp_desc::enable_dragndrop"]
        [::std::mem::offset_of!(sapp_desc, enable_dragndrop) - 112usize];
    ["Offset of field: sapp_desc::max_dropped_files"]
        [::std::mem::offset_of!(sapp_desc, max_dropped_files) - 116usize];
    ["Offset of field: sapp_desc::max_dropped_file_path_length"]
        [::std::mem::offset_of!(sapp_desc, max_dropped_file_path_length) - 120usize];
    ["Offset of field: sapp_desc::icon"][::std::mem::offset_of!(sapp_desc, icon) - 128usize];
    ["Offset of field: sapp_desc::allocator"]
        [::std::mem::offset_of!(sapp_desc, allocator) - 392usize];
    ["Offset of field: sapp_desc::logger"][::std::mem::offset_of!(sapp_desc, logger) - 416usize];
    ["Offset of field: sapp_desc::gl_major_version"]
        [::std::mem::offset_of!(sapp_desc, gl_major_version) - 432usize];
    ["Offset of field: sapp_desc::gl_minor_version"]
        [::std::mem::offset_of!(sapp_desc, gl_minor_version) - 436usize];
    ["Offset of field: sapp_desc::win32_console_utf8"]
        [::std::mem::offset_of!(sapp_desc, win32_console_utf8) - 440usize];
    ["Offset of field: sapp_desc::win32_console_create"]
        [::std::mem::offset_of!(sapp_desc, win32_console_create) - 441usize];
    ["Offset of field: sapp_desc::win32_console_attach"]
        [::std::mem::offset_of!(sapp_desc, win32_console_attach) - 442usize];
    ["Offset of field: sapp_desc::html5_canvas_selector"]
        [::std::mem::offset_of!(sapp_desc, html5_canvas_selector) - 448usize];
    ["Offset of field: sapp_desc::html5_canvas_resize"]
        [::std::mem::offset_of!(sapp_desc, html5_canvas_resize) - 456usize];
    ["Offset of field: sapp_desc::html5_preserve_drawing_buffer"]
        [::std::mem::offset_of!(sapp_desc, html5_preserve_drawing_buffer) - 457usize];
    ["Offset of field: sapp_desc::html5_premultiplied_alpha"]
        [::std::mem::offset_of!(sapp_desc, html5_premultiplied_alpha) - 458usize];
    ["Offset of field: sapp_desc::html5_ask_leave_site"]
        [::std::mem::offset_of!(sapp_desc, html5_ask_leave_site) - 459usize];
    ["Offset of field: sapp_desc::html5_update_document_title"]
        [::std::mem::offset_of!(sapp_desc, html5_update_document_title) - 460usize];
    ["Offset of field: sapp_desc::html5_bubble_mouse_events"]
        [::std::mem::offset_of!(sapp_desc, html5_bubble_mouse_events) - 461usize];
    ["Offset of field: sapp_desc::html5_bubble_touch_events"]
        [::std::mem::offset_of!(sapp_desc, html5_bubble_touch_events) - 462usize];
    ["Offset of field: sapp_desc::html5_bubble_wheel_events"]
        [::std::mem::offset_of!(sapp_desc, html5_bubble_wheel_events) - 463usize];
    ["Offset of field: sapp_desc::html5_bubble_key_events"]
        [::std::mem::offset_of!(sapp_desc, html5_bubble_key_events) - 464usize];
    ["Offset of field: sapp_desc::html5_bubble_char_events"]
        [::std::mem::offset_of!(sapp_desc, html5_bubble_char_events) - 465usize];
    ["Offset of field: sapp_desc::html5_use_emsc_set_main_loop"]
        [::std::mem::offset_of!(sapp_desc, html5_use_emsc_set_main_loop) - 466usize];
    ["Offset of field: sapp_desc::html5_emsc_set_main_loop_simulate_infinite_loop"][::std::mem::offset_of!(
        sapp_desc,
        html5_emsc_set_main_loop_simulate_infinite_loop
    ) - 467usize];
    ["Offset of field: sapp_desc::ios_keyboard_resizes_canvas"]
        [::std::mem::offset_of!(sapp_desc, ios_keyboard_resizes_canvas) - 468usize];
};
pub const sapp_html5_fetch_error_SAPP_HTML5_FETCH_ERROR_NO_ERROR: sapp_html5_fetch_error = 0;
pub const sapp_html5_fetch_error_SAPP_HTML5_FETCH_ERROR_BUFFER_TOO_SMALL: sapp_html5_fetch_error =
    1;
pub const sapp_html5_fetch_error_SAPP_HTML5_FETCH_ERROR_OTHER: sapp_html5_fetch_error = 2;
pub type sapp_html5_fetch_error = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_html5_fetch_response {
    pub succeeded: bool,
    pub error_code: sapp_html5_fetch_error,
    pub file_index: ::std::os::raw::c_int,
    pub data: sapp_range,
    pub buffer: sapp_range,
    pub user_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_html5_fetch_response"]
        [::std::mem::size_of::<sapp_html5_fetch_response>() - 56usize];
    ["Alignment of sapp_html5_fetch_response"]
        [::std::mem::align_of::<sapp_html5_fetch_response>() - 8usize];
    ["Offset of field: sapp_html5_fetch_response::succeeded"]
        [::std::mem::offset_of!(sapp_html5_fetch_response, succeeded) - 0usize];
    ["Offset of field: sapp_html5_fetch_response::error_code"]
        [::std::mem::offset_of!(sapp_html5_fetch_response, error_code) - 4usize];
    ["Offset of field: sapp_html5_fetch_response::file_index"]
        [::std::mem::offset_of!(sapp_html5_fetch_response, file_index) - 8usize];
    ["Offset of field: sapp_html5_fetch_response::data"]
        [::std::mem::offset_of!(sapp_html5_fetch_response, data) - 16usize];
    ["Offset of field: sapp_html5_fetch_response::buffer"]
        [::std::mem::offset_of!(sapp_html5_fetch_response, buffer) - 32usize];
    ["Offset of field: sapp_html5_fetch_response::user_data"]
        [::std::mem::offset_of!(sapp_html5_fetch_response, user_data) - 48usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_html5_fetch_request {
    pub dropped_file_index: ::std::os::raw::c_int,
    pub callback:
        ::std::option::Option<unsafe extern "C" fn(arg1: *const sapp_html5_fetch_response)>,
    pub buffer: sapp_range,
    pub user_data: *mut ::std::os::raw::c_void,
}
